# Data_Quality

./: README.md  pyproject.toml  schema_crm.py
.github/workflows/: CI.yml
app/: etl.py  schema_crm.py
docs/: index.md
